syntax = "proto3";

package calculator;
option go_package = "calculatorpb";


message CalcRequest{
    int32 no1 = 1;
    int32 no2 = 2;
}

message CalcPrimeRequest{
    int32 number = 1;
}

message CalcResponse{
    int32 result = 1;
}

message ComputeAverageRequest{
    int32 number =1;
}

message ComputeAverageResponse{
    float result = 1;
}

message FindMaxRequest{
    int32 number = 1;
}

message FindMaxResponse {
    int32 result = 1;
}
service CalculatorService {
    //Unary
    rpc Sum(CalcRequest) returns (CalcResponse){};
    rpc Prime(CalcPrimeRequest) returns (stream CalcResponse){};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse){};
}